#   This is required solely because `setuptools` has no way to specify
#   inclusion of non-Python scripts in `pyproject.toml`.
#
#   WARNING: This does *NOT* use the source version in bin/dockerd-proxy
#   when this package is installed as editable (`pip install -e`); it
#   simply copies the script. If you update the source version, you will
#   need to re-install `dent` or manually copy the file to see the updates
#   in the installed package.
#
[options]
scripts = bin/dockerd-proxy
